# MiraMate-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  cleanup_db.py  docker-compose.yml  llm_config.json.example  pyproject.toml  test_cli.py
configs/: llm_config.json.example  user_config.json.example
docs/: DOCKER_DEPLOYMENT.md  STREAM_API_GUIDE.md
mira-desktop/: main.js  package-lock.json  package.json  preload.js
mira-desktop/assets/: icon.icns
mira-desktop/scripts/: setup.bat  start.bat
mira-desktop/web/: VISUAL_EFFECTS_README.md  index.html  settings.html  test-effects.html
mira-desktop/web/css/: settings.css  style.css  visual-effects.css
mira-desktop/web/js/: chat.js  config.js  performance-monitor.js  settings.js  visual-effects.js  websocket-simple.js
scripts/: cleanup_db.py
src/MiraMate/core/: background_tasks.py  idle_processor.py  pipeline.py  post_async_chain.py  post_sync_chain.py
src/MiraMate/modules/: TimeTokenMemory.py  llms.py  memory_cache.py  memory_system.py  settings.py  status_system.py
src/MiraMate/prompts/: system_prompt.jinja2
src/MiraMate/web_api/: README.md  __init__.py  auth.py  config_manager.py  conversation_adapter.py  models.py  requirements-web.txt  start_web_api.py  web_api.py  websocket_handler.py
src/MiraMate/web_api/memory_db/: chroma.sqlite3
